# Neural

./: .gitignore  DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
configs/examples/: audio_cnn_speech.yaml  cnn_cifar10.yaml  lstm_sequence.yaml  mlp_tabular.yaml  tabular_advanced.yaml  tcn_timeseries.yaml  transformer_text.yaml  video_cnn_ucf.yaml
neural_platform/: __init__.py
neural_platform/cli/: __init__.py  _templates.py  commands.py
neural_platform/core/: __init__.py  config.py  config_introspect.py  deps.py  evaluator.py  event_bus.py  experiment.py  hf_auth.py  hf_compat.py  hf_introspect.py  modality.py  model_source.py  pipeline_specs.py  registry.py  resource_fit.py  tasks.py  trainer.py  validator.py
neural_platform/data/: __init__.py  loader.py  transforms.py
neural_platform/deploy/: __init__.py  server.py
neural_platform/frameworks/: __init__.py  base.py  factory.py  jax_adapter.py  pytorch_adapter.py  tensorflow_adapter.py
neural_platform/models/: __init__.py  audio.py  base.py  cnn.py  hf_pipeline.py  mlp.py  rnn.py  tabular.py  tcn.py  transformer.py  video.py
neural_platform/web/: __init__.py  app.py  inference_manager.py  openapi_ui.py  training_manager.py
neural_platform/web/static/: app.js  form_builder.js  index.html  styles.css
tests/: test_auto_class_fallback.py  test_chat.py  test_compat_and_ctc.py  test_config_introspect.py  test_config_path_resolution.py  test_dataset_compat.py  test_hf_defaults.py  test_hf_inference_launcher.py  test_inference_manager.py  test_managed_config_isolation.py  test_model_source.py  test_pad_token_and_embeddings.py  test_pipeline_specs.py  test_predict_history.py  test_quantization.py  test_resume_finetune.py  test_streaming.py  test_structured_outputs.py  test_universal_input.py
